# Maj_Engine

./: .gitignore  CMakeLists.txt  Engine.config  Layer.config  MAJ_Engine.sln  MAJ_Engine.vcxproj  MAJ_Engine.vcxproj.filters  MAJ_EngineConfig.cmake  README.md  Scene.config  compile.bat  install.bat
Editor/: CMakeLists.txt  MAJ_EditorConfig.cmake
Editor/include/: Application.h  CustomStyle.h  WGameContainer.h  WHierarchy.h  WMainWindow.h  WMenuWin.h  WProject.h
Editor/include/inspector/: IInspectorComponent.h  RegisteredInspector.h  WCheckBox.h  WDropInspector.h  WEnumInspector.h  WEnumInspector.inl  WFlagInspector.h  WFlagInspector.inl  WFloatSpinBox.h  WInspector.h  WInspectorAsset.h  WInspectorAsset.inl  WInspectorComponent.h  WInspectorComponent.inl  WIntSpinBox.h  WMapInspector.h  WMapInspector.inl  WStringInspector.h  WVectorInspector.h  WVectorInspector.inl
Editor/include/inspector/custom/: WActorInspector.h  WActorInspector.inl  WAssetInspector.h  WAssetInspector.inl  WCBoxColliderInspector.h  WCBoxColliderInspector.inl  WCCameraInspector.h  WCCameraInspector.inl  WCCapsuleColliderInspector.h  WCCapsuleColliderInspector.inl  WCTransformInspector.h  WCTransformInspector.inl  WCWidgetInspector.h  WCWidgetInspector.inl  WColorInspector.h  WColorInspector.inl  WICColliderInspector.h  WICColliderInspector.inl  WIComponentInspector.h  WIComponentInspector.inl  WIElementInspector.h  WIElementInspector.inl  WQuatfInspector.h  WQuatfInspector.inl  WShaderInspector.h  WShaderInspector.inl  WSphereColliderInspector.h  WSphereColliderInspector.inl  WTextInspector.h  WTextInspector.inl  WVec2uiInspector.inl  WVec3fInspector.h  WVec3fInspector.inl  WVec4fInspector.h  WVec4fInspector.inl  Wvec2uiInspector.h
Editor/src/: Application.cpp  CMakeLists.txt  CMakeSettings.json  CustomStyle.cpp  WGameContainer.cpp  WHierarchy.cpp  WMainWindow.cpp  WProject.cpp  WmenuWin.cpp  main.cpp
Editor/src/inspector/: IInspectorComponent.cpp  WCheckBox.cpp  WDropWidget.cpp  WFloatSpinBox.cpp  WInspector.cpp  WInspectorAsset.cpp  WInspectorComponent.cpp  WIntSpinBox.cpp  WStringInspector.cpp
Editor/src/inspector/custom/: WActorInspector.cpp  WAssetInspector.cpp  WCBoxColliderInspector.cpp  WCCameraInspector.cpp  WCCapsuleColliderInspector.cpp  WCTransformInspector.cpp  WCWidgetInspector.cpp  WColorInspector.cpp  WICColliderInspector.cpp  WIComponentInspector.cpp  WIElementInspector.cpp  WQuatfInspector.cpp  WShaderInspector.cpp  WSphereColliderInspector.cpp  WTextInspector.cpp  WVec2uiInspector.cpp  WVec3fInspector.cpp  WVec4fInspector.cpp
Engine/: CMakeLists.txt
Engine/Rhi/: CMakeLists.txt
Engine/Rhi/include/common/: Format.inl  (+8 more)
Engine/WW/: CMakeLists.txt
Engine/WW/include/: Input.h  Mouse.h
Engine/WW/src/: Key.cpp  Mouse.cpp
Engine/include/anim/: AnimVertex.inl  Skeleton.h
Engine/include/gizmo/: GizmoHandler.h  Handle.h  IGizmo.h  Sprite.h
Engine/include/gui/: Char.h  IElement.h  IElement.inl  Text.h
Engine/include/physic/: CBoxCollider.h  CCapsuleCollider.h  CSphereCollider.h  ICCollider.h  ICCollider.inl  Layer.h  PhysXHelper.h
Engine/include/resources/: LoaderFbx.h  LoaderFont.h  SkeletalModel.h  Vertex.h
Engine/include/scene/: ACamera.h  AEditorCamera.h  AGameCamera.h  Actor.h  Actor.inl  CCamera.h  CDirectionalLight.h  CSkeletalMesh.h  CStaticMesh.h  CTransform.h  CameraHandler.h  SceneHandler.h
Engine/src/: Color.cpp  Engine.cpp
Engine/src/anim/: AnimVertex.cpp  Animation.cpp  Blend2D.cpp  ControlPoint.cpp  Joint.cpp  Skeleton.cpp
Engine/src/gizmo/: GizmoHandler.cpp  IGizmo.cpp  Selection.cpp  Selector.cpp
Engine/src/gui/: CWidget.cpp  Char.cpp  Font.cpp  Sprite.cpp
Engine/src/physic/: CBoxCollider.cpp  ICCollider.cpp  Instance.cpp  Layer.cpp  PhysXSimulationCallback.cpp
Engine/src/resources/: AssetsHandler.cpp  LoaderObj.cpp  Vertex.cpp
Engine/src/scene/: AGameCamera.cpp  ASkybox.cpp  CDirectionalLight.cpp  CPointLight.cpp  CStaticMesh.cpp  CameraHandler.cpp  ICLight.cpp  ICMesh.cpp  IComponent.cpp  LightHandler.cpp  Scene.cpp
Game/: CMakeLists.txt  CMakeSettings.json  Engine.config  Scene.config  compile.bat
Game/asset/: First_Scene.scene  GoalMaterial.asset  KeyMaterial.asset  Prototype.scene  arrow.asset  barrelDiffuse.asset  barrelMaterial.asset  barrelMesh.asset  barrelNormal.asset  barrelSpec.asset  imgArrow.asset  imgBarrelNormal.asset  imgBarrelSpec.asset  imgBarreldiff.asset  imgTexNormal.asset  imgTexSpec.asset  imgTexWood.asset  imgTexture.asset  imgWoodNormal.asset  texNormal.asset  texSpec.asset  texture.asset  unrealMaterial.asset  unrealMesh.asset  wallMaterial.asset  woodNormal.asset  woodTex.asset
Game/asset/default/: camera.asset  cube.asset  cubeFbx.asset  fbxLayout.asset  gridLayout.asset  handleMaterial.asset  imgCamera.asset  imgNormal.asset  imgPointLight.asset  imgSkybox.asset  normal.asset  objLayout.asset  objMaterial.asset  screenTextMaterial.asset  skyboxLayout.asset  skyboxMaterial.asset  sphere.asset  spotLight.asset  spriteLayout.asset  spriteMaterial.asset  worldSpriteMaterial.asset
Game/data/models/: cube.fbx
Game/data/shaders/: blit.frag  defaultFbx.vert  defaultObj.frag  defaultObj.vert  defaultSpriteGizmo.frag  fbxPlayer.frag  grid.frag  handle.frag  postprocess.frag  screenSpace.vert  selection.frag  text.frag
Game/script/: CMakeLists.txt
Game/script/include/: Barrel.h  CameraBehavior.h  DeathZone.h
Game/script/src/: Barrel.cpp  CameraBehavior.cpp  DeathZone.cpp  Light.cpp  main.cpp
Maths/: CMakeLists.txt
Maths/include/: Mat3.inl  Mat4.h  Mat4.inl  Quaternion.h  Transform.h  Vec2.h  Vec3.h  Vec3.inl  Vec4.h  Vec4.inl
UnitTest/: CMakeLists.txt
UnitTest/include/: Test.h
UnitTest/src/: Mat3.cpp  Transform.cpp  Vec2.cpp  Vec3.cpp
Utils/: CMakeLists.txt
Utils/include/: Asset.inl  Event.h  Event.inl  Flag.h  ISerializable.h  Logger.h  Logger.inl  LoggerLevel.h  Logging.h  NonCopyable.h  NullOutput.h  NullOutput.inl  OutputLevelRunTimeSwitch.inl  ScriptModule.h  ScriptModule.inl  Singleton.inl  StdOutput.inl  ThreadPool.inl  Timer.h
Utils/src/: JsonNode.cpp  ScriptModule.cpp  ThreadPool.cpp
(+257 files in other folders)
